src/objects/GDMFSL_Associated_Contract__c/GDMFSL_Associated_Contract__c.object-meta.xml
<CustomObject>
    <label>Associated Contract</label>
    <nameField>
        <displayFormat>ACN-{0000}</displayFormat>
        <label>Associated Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>