src/objects/GDMFSL_Associated_Contract__c/fields/GDMFSL_ContractActive__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_ContractActive__c</fullName>
    <formula>Service_Contract__r.GDMFSL_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDMFSL_ContractActive</label>
    <type>Checkbox</type>
</CustomField>