src/objects/GDMFSL_Associated_Contract__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Associated Contracts</relationshipLabel>
    <relationshipName>Associated_Contracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>